Fix core + tg bot
